--- a/src/components/AnnualReturnsTable/AnnualReturnsTable.css
+++ b/src/components/AnnualReturnsTable/AnnualReturnsTable.css
@@ -1,20 +1,31 @@
-.container{
+.table-container-container{
     display: flex;
-    flex-direction: column;
-    align-items: center;
     justify-content: center;
-    margin: 75px 0 25px 0;
-}
-
-.title{
-    font-size: 1.5rem;
+    width:100%;
+    margin: 50px 0 25px 0;
 }
 
 .table-container{
-    width:75%;
+    width:55%;
 }
 
 table, td, th{
     border: 1px solid #dee2e6;
 }
+
+@media (max-width: 770px) {
+    .table-container-container{
+        margin-top: 25px;
+    }
+    .table-container{
+        margin: 0 25px;
+        width: 80%;
+    }
+ }
+
+@media (max-width: 500px) {
+    .table-container{
+        width: 100%;
+    }
+ }
 
