--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -6,14 +6,20 @@
 .hdr{
     font-weight: 200;
 }
-
+/*-------------------------------------Tablet----------------------------------------*/
+@media (max-width: 800px) {
+    .hdr{
+        font-size: 2rem;
+    }
+ }
+/*-------------------------------------Mobile----------------------------------------*/
  @media (max-width: 500px) {
     .hdr{
         font-size: 1.75rem;
     }
  }
-
- @media (max-width: 320px) {
+/*----------------------------------Mobile(x-small)----------------------------------*/
+ @media (max-width: 375px) {
     .hdr{
         font-size: 1.5rem;
     }
