--- a/src/components/AnnualReturnsSlider/AnnualReturnsSlider.css
+++ b/src/components/AnnualReturnsSlider/AnnualReturnsSlider.css
@@ -7,8 +7,8 @@
 .range-container{
     width: 55%;
 }
-
-@media (max-width: 770px) {
+/*------------------------------------Tablet----------------------------------------*/
+@media (max-width: 800px) {
     .range-container-container{
         margin-top: 25px;
     }
@@ -17,7 +17,7 @@
         width: 80%;
     }
  }
-
+/*-------------------------------------Mobile----------------------------------------*/
 @media (max-width: 500px) {
     .range-container{
         width: 100%;
