--- a/src/components/AnnualReturnsTable/AnnualReturnsTable.css
+++ b/src/components/AnnualReturnsTable/AnnualReturnsTable.css
@@ -12,8 +12,8 @@
 table, td, th{
     border: 1px solid #dee2e6;
 }
-
-@media (max-width: 770px) {
+/*-------------------------------------Tablet----------------------------------------*/
+@media (max-width: 800px) {
     .table-container-container{
         margin-top: 25px;
     }
@@ -22,7 +22,7 @@ table, td, th{
         width: 80%;
     }
  }
-
+/*-------------------------------------Mobile----------------------------------------*/
 @media (max-width: 500px) {
     .table-container{
         width: 100%;
